--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body .birthday .add:hover {
   color: white;
 }
 body .birthday_inner__modal {
+  width: 500px;
   position: absolute;
   left: 0;
   right: 0;
@@ -44,6 +45,7 @@ body .birthday_inner__modal {
   padding: 40px 40px 100px 40px;
   box-shadow: 0px 3px 10px 0px #e5b4b2;
 }
+
 body .birthday_inner__modal .modal_image {
   position: absolute;
   top: 0;
@@ -88,6 +90,7 @@ body .birthday_inner .stage1 {
   display: block;
 }
 body .birthday_inner__stage {
+  width: 500px;
   position: absolute;
   left: 0;
   right: 0;
@@ -115,7 +118,7 @@ body .birthday_inner__stage .mix {
 body .birthday_inner__stage .mix_spoon {
   position: absolute;
   top: -37px;
-  left: 150px;
+  left: 200px;
   -webkit-transform: rotate(0deg) translateX(15px) translateY(3px) rotate(0deg)
     scale(1);
 }
@@ -570,4 +573,17 @@ line {
   stroke: #e77572;
   z-index: 1;
   opacity: 1;
+}
+
+@media only screen and (max-width: 600px) {
+  body .birthday_inner__modal {
+    width: 100%;
+  }
+  body .birthday_inner__stage {
+    width: 100%;
+  }
+
+  body .birthday_inner__stage .mix_spoon {
+    left: 150px;
+  }
 }
