--- a/style.css
+++ b/style.css
@@ -595,6 +595,8 @@ svg {
 }
 
 .text {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 3.5em;
   font-weight: bold;
   fill: none;
