--- a/style.css
+++ b/style.css
@@ -600,7 +600,7 @@ svg {
   font-size: 3.5em;
   font-weight: bold;
   fill: none;
-  stroke: #e77572; /* Màu đường viền chữ */
+  stroke: #e77572;
   stroke-width: 2px;
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
