--- a/style.css
+++ b/style.css
@@ -599,7 +599,7 @@ svg {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 3.5em;
   font-weight: bold;
-  fill: none;
+  fill: #e77572;
   stroke: #e77572;
   stroke-width: 2px;
   stroke-dasharray: 1000;
